--- a/client/styles.scss
+++ b/client/styles.scss
@@ -499,6 +499,9 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+.Domains{
+  min-width: 680px;
+}
 /* BUCKET SETTINGS PAGE STYLES ENDS HERE */
 
 /* MODAL BUCKET MANAGE META MODAL PAGE STYLES STARTS HERE */
@@ -805,7 +808,6 @@
 
 /* FOOTER COMPONENT STYLES STARTS HERE */
 .Footer {
-  margin-left: 200px;
 }
 /* FOOTER COMPONENT STYLES ENDS HERE */
 
